# django-models

./: Readme.md  pyproject.toml
Templates/: base.html  drinks_detail.html  drinks_list.html  snack_detail.html
snack_tracker_project/: settings.py  urls.py
snacks/: admin.py  models.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py  0002_drinks.py  0003_alter_drinks_image.py  0004_drinks_upload.py
snacks/static/snacks/: style.css
