[tool.poetry]
name = "django-models"
version = "0.1.0"
description = ""
authors = ["Anas AbuGhalieh <civil.Anas1000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
black = "^21.8b0"
flake8 = "^3.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
